[gd_scene load_steps=4 format=3 uid="uid://0arj54tytgb5"]

[ext_resource type="Texture2D" uid="uid://be4gw0ymtrdkq" path="res://Assets/Sprites/Close.png" id="1_2ru37"]
[ext_resource type="Script" path="res://Scenes/Objects/UI/MovementUI.gd" id="1_6au3l"]
[ext_resource type="Texture2D" uid="uid://c7fq8gigavlh0" path="res://Assets/Sprites/Bag.png" id="2_rpc5p"]

[node name="MovementUI" type="Control"]
custom_minimum_size = Vector2(720, 426)
layout_mode = 3
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 426.24
offset_right = -360.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6au3l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 360.0
offset_bottom = 200.0
scale = Vector2(2, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Inventory" type="TextureButton" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_rpc5p")

[node name="Left" type="TextureButton" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_2ru37")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Up" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_2ru37")
stretch_mode = 4

[node name="Select" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_2ru37")
stretch_mode = 4

[node name="Down" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_2ru37")
stretch_mode = 4

[node name="Right" type="TextureButton" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_2ru37")
stretch_mode = 4

[connection signal="pressed" from="CenterContainer/HBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
